--- a/style.css
+++ b/style.css
@@ -27,10 +27,11 @@ body {
   height: 100px;
   border-radius: 10px;
   resize: none;
+  border: 1px solid #495057;
 }
 
 #post-body-input:focus {
-  border-color: #dfdfdf !important ;
+  /* border-color: #dfdfdf !important ; */
   box-shadow: 0 0 0 0.2rem rgba(230, 230, 230, 0.25);
   outline: none;
 }
@@ -101,3 +102,8 @@ box-shadow: 0 0 0 0.2rem rgba(230, 230, 230, 0.25);
   }
  }
 
+.footer a {
+  text-decoration: none;
+  color: #d7ce6c;
+  font-weight: 700;
+}
